<resources>
    <string name="app_name">Admin Dashboard</string>
    <string name="books">Books</string>
    <string name="pyq">PYQ</string>
    <string name="please_provide_all_the_required_information">Please provide all the required information</string>
    <string name="login_your_account">Login Your Account</string>
    <string name="modern_mail_id">Modern mail id</string>
    <string name="salman_khan_moderncoe_edu_in">salman_khan@moderncoe.edu.in</string>
    <string name="password">Password</string>
    <string name="passwordHint">********</string>
    <string name="login">Login</string>
    <string name="please_wait">Please Wait...</string>
    <string name="placement_assistant">Control Panel</string>
    <string name="dashboard">Dashboard</string>
    <string name="book">book</string>
    <string name="display_notification">Display Notification</string>
    <string name="new_book_pdf">new_book.pdf</string>
    <string name="upload">Upload</string>
    <string name="browse_files">Browse files</string>
    <string name="enter_publications_name">Enter Publications name</string>
    <string name="notification">Notification</string>
    <string name="enter_notification">Enter Notification</string>
    <string name="push">Push</string>
    <string name="enter_title">Enter Title</string>
</resources>