<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/anti_flash_white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="#F5F5F5"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/back"
                android:src="@drawable/round_arrow_back_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/appbarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/books"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/parseion_green"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:text="@string/books"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="20dp"
                android:contentDescription="@string/book"
                android:src="@drawable/book" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/pyq"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/parseion_green"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:text="@string/pyq"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="20dp"
                android:src="@drawable/exam" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/controlPanel"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/parseion_green"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:minLines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:text="@string/notification"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="20dp"
                android:src="@drawable/coding" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/baseline_notification_add_24" />
</RelativeLayout>