<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.NotifficationActivity">

    <LinearLayout
        android:layout_above="@id/floatingBtn"
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/transparent"
            android:foregroundGravity="center"
            android:src="@drawable/baseline_camera_alt_24" />

        <EditText
            android:fontFamily="@font/poppins"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_title"
            android:inputType="text"
            android:lines="1"
            android:padding="10dp" />

        <EditText
            android:fontFamily="@font/poppins"
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_notification"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/push"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/poppins"
            android:layout_marginHorizontal="15dp"

            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/selected"
            android:padding="10dp"
            android:text="@string/push"
            android:textSize="18sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/baseline_settings_24" />
</RelativeLayout>