<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/anti_flash_white"
    android:orientation="vertical"
    tools:context=".ui.UploadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_arrow_back_24" />

        <TextView

            android:fontFamily="@font/poppins"
            android:id="@+id/appbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>
    <TextView
        android:id="@+id/dir"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:background="#F5F5F5"
        android:textColor="@color/black"
        android:text=" sem 3/ dm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/dotted_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingBottom="5dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_cloud_upload_24" />

            <TextView
                android:fontFamily="@font/poppins"
                android:id="@+id/pdf_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginVertical="8dp"
                android:layout_marginEnd="10dp"
                android:drawableStart="@drawable/pdf_logo"
                android:drawablePadding="5dp"
                android:text="@string/new_book_pdf"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/publication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/enter_publications_name"
            android:maxLines="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:textColorHint="@color/hint">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:fontFamily="@font/poppins"
            android:id="@+id/exam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="Exam"
            android:maxLines="1"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:visibility="gone" />


        <EditText
            android:fontFamily="@font/poppins"
            android:id="@+id/yearOfExam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="Year of examination"
            android:maxLines="1"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:visibility="gone" />


        <androidx.appcompat.widget.AppCompatButton
            android:gravity="center"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/round_document_scanner_24"
            android:fontFamily="@font/poppins"
            android:id="@+id/browseFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/selected"
            android:paddingHorizontal="20dp"
            android:text="@string/browse_files" />


        <androidx.appcompat.widget.AppCompatButton
            android:fontFamily="@font/poppins"
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/selected"
            android:padding="5dp"

            android:text="@string/upload" />
    </LinearLayout>


</LinearLayout>